# qwenimg2512

./: .gitignore  .rclone-ignore  README.md  debug_depth_cameras.py  download_models.sh  fuse_telestyle.py  local_setup.sh  pyproject.toml  test_context_manager.py  test_sched.py  test_worker.py  vastai_setup.sh
blender_plugin/qwenbuild/: __init__.py  blender_manifest.toml  camera_placement.py
blender_plugin/qwenbuild/sg_core/: __init__.py  project.py  render_tools.py  utils.py
src/qwenimg2512/: __init__.py  __main__.py  captioning_worker.py  config.py  edit_2509_worker.py  edit_worker.py  fun_controlnet.py  history.py  main_window.py  pipeline_patch.py  prompt_recipes.py  qwenimg2512.code-workspace  resize_utils.py  schedules.py  seedvr2_worker.py  wan_worker.py  webui_cli.py  worker.py
src/qwenimg2512/samplers/: __init__.py  base.py  dpmpp.py  euler.py  euler_ancestral.py  ge_euler.py  loops.py  registry.py  res.py
src/qwenimg2512/styles/: dark_theme.py
src/qwenimg2512/widgets/: controlnet_settings.py  edit_tab.py  generation_controls.py  history_tab.py  image_comparison.py  image_input.py  image_preview.py  image_settings.py  lora_settings.py  model_paths_dialog.py  prompt_crafter_tab.py  prompt_input.py  seedvr2_tab.py  wan_tab.py
webui/: .settings.json  app.py  index.css  index.html  main.js  package-lock.json  package.json  vite.config.js
